--- a/src/pages/amodal/styled.css
+++ b/src/pages/amodal/styled.css
@@ -1,4 +1,4 @@
-.modelContainer{
+.modalContainer{
     position: absolute;
     top:0;
     left: 0;
@@ -10,7 +10,7 @@
     justify-content: center;
     align-items: center;
 }
-.modelContainer .model{
+.modalContainer .modal{
     height:3.95rem;
     width:2.62rem;
     background:F7F7F7;
@@ -19,7 +19,7 @@
     justify-content: space-between;
     align-items: center;
 }
-.modelContainer .header{
+.modalContainer .header{
     width:100%;
     height: 2.94rem;
     background: #F7F7F7;
@@ -27,19 +27,19 @@
     padding: .33rem;
     
 }
-.modelContainer .header .title{
+.modalContainer .header .title{
     height: .2rem;
     line-height: .2rem;
     font-size: .16rem;
     font-weight: bold;
     margin-bottom:.16rem;
 }
-.modelContainer .header p{
+.modalContainer .header p{
     line-height: .22rem;
     font-size: .11rem;
     color:#666666;
 }
-.modelContainer .footer button{
+.modalContainer .footer button{
     height: 0.2rem;
     width: .2rem;
     border-radius: 50%;
